<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="40dp"
        android:background="@color/blue_gray"
        android:hint="@string/enter_task_name"
        android:inputType="textCapWords"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_set_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_set_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue_gray"
        android:padding="10dp"
        android:text="@string/hint_enter_time"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ll_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task_name" />

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_gray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_set_time">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/blue_gray"
            android:text="@string/from"
            android:textAlignment="textEnd"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_time_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/set_time"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/blue_gray"
            android:text="@string/to"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/set_time"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/blue_gray"
        android:text="@string/button_text_save"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/blue_gray"
        android:hint="@string/enter_task_desc"
        android:padding="10dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintTop_toBottomOf="@id/ll_time" />


</androidx.constraintlayout.widget.ConstraintLayout>